--- a/quocnguytihoisanva.dict.yaml
+++ b/quocnguytihoisanva.dict.yaml
@@ -87,9 +87,9 @@
 邸	ải	
 骶	ải	
 𩑾	ải	
-軛	àc	
-軶	àc	
-鐲	àc	
+軛	ẵc	
+軶	ẵc	
+鐲	ẵc	
 揳	ạc	
 特	ạc	
 螣	ạc	
@@ -218,8 +218,8 @@
 捯	ảo	
 搗	ảo	
 㠀	ảo	
-閤	àp	
-鴿	àp	
+閤	ãp	
+鴿	ãp	
 匼	ạp	
 沓	ạp	
 譶	ạp	
@@ -312,7 +312,7 @@
 捭	bải	
 擺	bải	
 跛	bải	
-伯	bàc	
+伯	bẵc	
 僰	bạc	
 匐	bạc	
 卜	bạc	
@@ -451,7 +451,7 @@
 㧙	bich	
 㳼	bich	
 䩛	bich	
-泵	bểm	
+泵	bẻm	
 邊	bĩnh	
 並	bịnh	
 併	bịnh	
@@ -749,9 +749,9 @@
 蒡	bỏng	
 謗	bỏng	
 髈	bỏng	
-癶	bòt	
-缽	bòt	
-鉢	bòt	
+癶	bõt	
+缽	bõt	
+鉢	bõt	
 勃	bọt	
 孛	bọt	
 悖	bọt	
@@ -947,9 +947,9 @@
 㡿	trich	
 䃎	trich	
 𢮓	trich	
-參	trểm	
-杉	trểm	
-釤	trểm	
+參	trẻm	
+杉	trẻm	
+釤	trẻm	
 秤	trĩnh	
 稱	trĩnh	
 𦓬	trĩnh	
@@ -982,7 +982,7 @@
 郢	trỉnh	
 騁	trỉnh	
 𩧢	trỉnh	
-尺	trềc	
+尺	trễc	
 ⻌	trệc	
 ⻍	trệc	
 ⻎	trệc	
@@ -1013,12 +1013,12 @@
 廛	triền	
 瀍	triền	
 丈	trễnh	
-場	trềnh	
-塲	trềnh	
-澄	trềnh	
-腸	trềnh	
-萇	trềnh	
-長	trềnh	
+場	trènh	
+塲	trènh	
+澄	trènh	
+腸	trènh	
+萇	trènh	
+長	trènh	
 倀	trếnh	
 倡	trếnh	
 唱	trếnh	
@@ -1039,7 +1039,7 @@
 瘳	trấu	
 篘	trấu	
 紬	trấu	
-轍	trêt	
+轍	tret	
 峙	trĩ	
 俿	trì	
 倁	trì	
@@ -1168,8 +1168,8 @@
 憷	trỏ	
 楚	trỏ	
 礎	trỏ	
-剒	tròc	
-戳	tròc	
+剒	trõc	
+戳	trõc	
 剒	tróc	
 戳	tróc	
 傳	tròn	
@@ -1392,8 +1392,8 @@
 借	té	
 嗟	té	
 姐	tẻ	
-卩	tìch	
-節	tìch	
+卩	tĩch	
+節	tĩch	
 借	tịch	
 夕	tịch	
 寂	tịch	
@@ -1428,7 +1428,7 @@
 鯽	tich	
 䲙	tich	
 䳭	tich	
-泵	tểm	
+泵	tẻm	
 凈	tịnh	
 凊	tịnh	
 婧	tịnh	
@@ -1484,9 +1484,9 @@
 餞	tỉnh	
 鬋	tỉnh	
 𨙷	tỉnh	
-脊	tềc	
-跡	tềc	
-雀	tềc	
+脊	tễc	
+跡	tễc	
+雀	tễc	
 席	tệc	
 蓆	tệc	
 嵴	tếc	
@@ -1628,12 +1628,12 @@
 滓	tỏi	
 籭	tỏi	
 載	tỏi	
-昨	tòc	
-柞	tòc	
-笮	tòc	
-莋	tòc	
-葃	tòc	
-雹	tòc	
+昨	tõc	
+柞	tõc	
+笮	tõc	
+莋	tõc	
+葃	tõc	
+雹	tõc	
 怍	tọc	
 柞	tọc	
 砟	tọc	
@@ -1910,7 +1910,7 @@
 蹢	ich	
 鍉	ich	
 鏑	ich	
-鵪	ểm	
+鵪	ẻm	
 佃	ịnh	
 啶	ịnh	
 奠	ịnh	
@@ -2447,7 +2447,7 @@
 黼	phủ	
 䯽	phủ	
 𩭍	phủ	
-伏	phùc	
+伏	phũc	
 伏	phục	
 匐	phục	
 宓	phục	
@@ -2577,7 +2577,7 @@
 諷	phủng	
 賵	phủng	
 䩬	phủng	
-忽	phùt	
+忽	phũt	
 佛	phụt	
 怫	phụt	
 㧾	phút	
@@ -2716,7 +2716,7 @@
 蚧	kải	
 解	kải	
 觧	kải	
-格	kàc	
+格	kẵc	
 嗝	kác	
 摑	kác	
 滆	kác	
@@ -2886,11 +2886,11 @@
 鎬	kảo	
 餃	kảo	
 高	kảo	
-合	kàp	
-夾	kàp	
-甲	kàp	
-莢	kàp	
-鋏	kàp	
+合	kãp	
+夾	kãp	
+甲	kãp	
+莢	kãp	
+鋏	kãp	
 夾	káp	
 搛	káp	
 搿	káp	
@@ -3039,8 +3039,8 @@
 𣕄	kỉnh	
 𧑊	kỉnh	
 𨴀	kỉnh	
-蛤	kêp	
-腳	kềc	
+蛤	kep	
+腳	kễc	
 屩	kếc	
 屫	kếc	
 腳	kếc	
@@ -3136,7 +3136,7 @@
 笈	kiêp	
 篋	kiêp	
 鷑	kiêp	
-疙	kêt	
+疙	ket	
 基	kỹ	
 箕	kỹ	
 萁	kỹ	
@@ -3353,10 +3353,10 @@
 改	kỏi	
 胲	kỏi	
 𨮂	kỏi	
-桷	kòc	
-梏	kòc	
-角	kòc	
-龣	kòc	
+桷	kõc	
+梏	kõc	
+角	kõc	
+龣	kõc	
 擱	kóc	
 覺	kóc	
 角	kóc	
@@ -3675,8 +3675,8 @@
 珙	kủng	
 鞏	kủng	
 䡗	kủng	
-葛	kùt	
-訣	kùt	
+葛	kũt	
+訣	kũt	
 倔	kụt	
 崛	kụt	
 掘	kụt	
@@ -4091,10 +4091,10 @@
 考	hảo	
 討	hảo	
 銬	hảo	
-匣	hàp	
-柙	hàp	
-狎	hàp	
-盒	hàp	
+匣	hãp	
+柙	hãp	
+狎	hãp	
+盒	hãp	
 合	hạp	
 嗑	hạp	
 峇	hạp	
@@ -4158,21 +4158,21 @@
 餮	hích	
 息	hich	
 歇	hich	
-凵	hễm	
-凼	hễm	
-坎	hễm	
-埳	hễm	
-氹	hễm	
-潭	hễm	
-含	hềm	
-啣	hềm	
-晗	hềm	
-浛	hềm	
-焓	hềm	
-衘	hềm	
-銜	hềm	
-陷	hệm	
-扻	hểm	
+凵	hẽm	
+凼	hẽm	
+坎	hẽm	
+埳	hẽm	
+氹	hẽm	
+潭	hẽm	
+含	hèm	
+啣	hèm	
+晗	hèm	
+浛	hèm	
+焓	hèm	
+衘	hèm	
+銜	hèm	
+陷	hẹm	
+扻	hẻm	
 侹	hĩnh	
 娗	hĩnh	
 挺	hĩnh	
@@ -4266,10 +4266,10 @@
 譴	hỉnh	
 遣	hỉnh	
 顯	hỉnh	
-嗑	hêp	
-溘	hêp	
-瞌	hêp	
-磕	hêp	
+嗑	hep	
+溘	hep	
+瞌	hep	
+磕	hep	
 吃	hếc	
 喫	hếc	
 岧	hiều	
@@ -4572,9 +4572,9 @@
 醢	hỏi	
 鎧	hỏi	
 闓	hỏi	
-殼	hòc	
-籜	hòc	
-鶴	hòc	
+殼	hõc	
+籜	hõc	
+鶴	hõc	
 學	học	
 澩	học	
 翯	học	
@@ -4706,7 +4706,7 @@
 躺	hỏng	
 鎲	hỏng	
 钂	hỏng	
-豁	hòt	
+豁	hõt	
 曷	họt	
 蝎	họt	
 褐	họt	
@@ -4941,8 +4941,8 @@
 椹	ẫm	
 砧	ẫm	
 碪	ẫm	
-塞	ầt	
-㩙	ầt	
+塞	ẫt	
+㩙	ẫt	
 塞	ất	
 㩙	ất	
 噎	ât	
@@ -5103,7 +5103,7 @@
 菷	chảo	
 㕚	chảo	
 㕚	chảo	
-喋	chàp	
+喋	chãp	
 牐	chạp	
 鍘	chạp	
 閘	chạp	
@@ -5162,7 +5162,7 @@
 蹠	chich	
 軄	chich	
 陟	chich	
-鵮	chểm	
+鵮	chẻm	
 剩	chịnh	
 賸	chịnh	
 阱	chịnh	
@@ -5294,24 +5294,24 @@
 㑇	chấu	
 㥮	chấu	
 皺	chẩu	
-褶	chiềp	
+褶	chiễp	
 折	chiếp	
 摺	chiếp	
 讋	chiếp	
-折	chết	
-踅	chết	
-哲	chêt	
-喆	chêt	
-嚞	chêt	
-折	chêt	
-晢	chêt	
-晣	chêt	
-浙	chêt	
-矺	chêt	
-蜇	chêt	
-騭	chêt	
-䇽	chêt	
-𧋍	chêt	
+折	chét	
+踅	chét	
+哲	chet	
+喆	chet	
+嚞	chet	
+折	chet	
+晢	chet	
+晣	chet	
+浙	chet	
+矺	chet	
+蜇	chet	
+騭	chet	
+䇽	chet	
+𧋍	chet	
 注	chĩ	
 珠	chĩ	
 疰	chĩ	
@@ -5684,8 +5684,8 @@
 稽	khải	
 綮	khải	
 䏿	khải	
-卡	khàc	
-咯	khàc	
+卡	khẵc	
+咯	khẵc	
 卡	khác	
 卡	khac	
 旮	khac	
@@ -5742,9 +5742,9 @@
 闃	khich	
 隙	khich	
 馘	khich	
-冚	khềm	
-蠄	khềm	
-冚	khểm	
+冚	khèm	
+蠄	khèm	
+冚	khẻm	
 乾	khình	
 勍	khình	
 惸	khình	
@@ -5778,10 +5778,10 @@
 廎	khỉnh	
 頃	khỉnh	
 𩒵	khỉnh	
-扱	khêp	
-給	khêp	
-佉	khềc	
-屐	khềc	
+扱	khep	
+給	khep	
+佉	khễc	
+屐	khễc	
 劇	khêc	
 卻	khêc	
 噱	khêc	
@@ -5814,10 +5814,10 @@
 膙	khễnh	
 襁	khễnh	
 鏹	khễnh	
-強	khềnh	
-彊	khềnh	
-擎	khềnh	
-檠	khềnh	
+強	khènh	
+彊	khènh	
+擎	khènh	
+檠	khènh	
 冦	khấu	
 叩	khấu	
 媾	khấu	
@@ -6298,7 +6298,7 @@
 拉	lái	
 癩	lái	
 孻	lải	
-勒	làc	
+勒	lẵc	
 仂	lạc	
 勒	lạc	
 叻	lạc	
@@ -6395,7 +6395,7 @@
 鬎	lạt	
 甩	lat	
 咧	lẽ	
-裂	lìch	
+裂	lĩch	
 冽	lịch	
 列	lịch	
 力	lịch	
@@ -6430,8 +6430,8 @@
 癧	lich	
 礫	lich	
 裂	lich	
-婪	lềm	
-蘸	lểm	
+婪	lèm	
+蘸	lẻm	
 嶺	lĩnh	
 攆	lĩnh	
 領	lĩnh	
@@ -6544,9 +6544,9 @@
 輦	lịnh	
 鏈	lịnh	
 令	lỉnh	
-笠	lềp	
-垃	leập	
-笠	lêp	
+笠	lễp	
+垃	lập	
+笠	lep	
 掠	lệc	
 撂	lệc	
 略	lệc	
@@ -6606,22 +6606,22 @@
 嶺	lễnh	
 鈴	lễnh	
 領	lễnh	
-〇	lềnh	
-墚	lềnh	
-梁	lềnh	
-椋	lềnh	
-樑	lềnh	
-涼	lềnh	
-粱	lềnh	
-糧	lềnh	
-良	lềnh	
-莨	lềnh	
-踉	lềnh	
-輛	lềnh	
-量	lềnh	
-零	lềnh	
-鯪	lềnh	
-𡆨	lềnh	
+〇	lènh	
+墚	lènh	
+梁	lènh	
+椋	lènh	
+樑	lènh	
+涼	lènh	
+粱	lènh	
+糧	lènh	
+良	lènh	
+莨	lènh	
+踉	lènh	
+輛	lènh	
+量	lènh	
+零	lènh	
+鯪	lènh	
+𡆨	lènh	
 亮	lệnh	
 喨	lệnh	
 諒	lệnh	
@@ -6663,7 +6663,7 @@
 蔞	lấu	
 褸	lấu	
 騮	lẩu	
-罅	liềp	
+罅	liễp	
 巤	liệp	
 獵	liệp	
 躐	liệp	
@@ -6837,8 +6837,8 @@
 誄	lọi	
 賚	lọi	
 䚅	lọi	
-絡	lòc	
-落	lòc	
+絡	lõc	
+落	lõc	
 樂	lọc	
 濼	lọc	
 落	lọc	
@@ -6896,7 +6896,7 @@
 晾	lóng	
 浪	lóng	
 蓢	lóng	
-捋	lòt	
+捋	lõt	
 埒	lọt	
 捋	lọt	
 鋝	lọt	
@@ -7004,7 +7004,7 @@
 類	lụy	
 呂	lủy	
 簍	lủy	
-碌	lùc	
+碌	lũc	
 六	lục	
 剹	lục	
 勠	lục	
@@ -7226,7 +7226,7 @@
 咪	mải	
 米	mải	
 脒	mải	
-墨	màc	
+墨	mẵc	
 冒	mạc	
 嘿	mạc	
 嚜	mạc	
@@ -7329,7 +7329,7 @@
 乜	mẻ	
 咩	mẻ	
 哶	mẻ	
-篾	mìch	
+篾	mĩch	
 汨	mịch	
 滅	mịch	
 烕	mịch	
@@ -7422,7 +7422,7 @@
 廟	miệu	
 玅	miệu	
 繆	miệu	
-名	mềnh	
+名	mènh	
 命	mệnh	
 詺	mệnh	
 厶	mẫu	
@@ -7547,7 +7547,7 @@
 昧	mọi	
 眛	mọi	
 妹	mỏi	
-膜	mòc	
+膜	mõc	
 莫	mọc	
 鄚	mọc	
 鏌	mọc	
@@ -7671,8 +7671,8 @@
 鶩	mụ	
 摸	mủ	
 舞	mủ	
-木	mùc	
-沐	mùc	
+木	mũc	
+沐	mũc	
 仫	mục	
 坶	mục	
 木	mục	
@@ -7828,7 +7828,7 @@
 鬧	nạo	
 堖	nảo	
 腦	nảo	
-衲	nàp	
+衲	nãp	
 吶	nạp	
 納	nạp	
 衲	nạp	
@@ -7843,7 +7843,7 @@
 野	né	
 乜	nẻ	
 呢	nẻ	
-捏	nìch	
+捏	nĩch	
 匿	nịch	
 搦	nịch	
 昵	nịch	
@@ -7853,9 +7853,9 @@
 掐	ních	
 匿	nich	
 鎳	nich	
-南	nềm	
-腍	nểm	
-腩	nểm	
+南	nèm	
+腍	nẻm	
+腩	nẻm	
 奶	nĩnh	
 恁	nĩnh	
 儜	nình	
@@ -7878,7 +7878,7 @@
 擰	nịnh	
 𧦣	nịnh	
 拎	nỉnh	
-偌	nềc	
+偌	nễc	
 偌	nếc	
 偌	nêc	
 嬲	niễu	
@@ -7902,11 +7902,11 @@
 撚	niếm	
 粘	niếm	
 捻	niểm	
-娘	nềnh	
-孃	nềnh	
+娘	nènh	
+孃	nènh	
 撓	nầu	
 耨	nậu	
-鑷	niềp	
+鑷	niễp	
 苶	niếp	
 菍	niếp	
 囁	niêp	
@@ -8050,7 +8050,7 @@
 遨	ngạo	
 咬	ngảo	
 齩	ngảo	
-掖	ngàp	
+掖	ngãp	
 啽	ngáp	
 噏	ngáp	
 噏	ngap	
@@ -8159,13 +8159,13 @@
 苒	ngiếm	
 蚺	ngiếm	
 仰	ngễnh	
-壤	ngềnh	
-攘	ngềnh	
-禳	ngềnh	
-穣	ngềnh	
-穰	ngềnh	
-蘘	ngềnh	
-蠰	ngềnh	
+壤	ngènh	
+攘	ngènh	
+禳	ngènh	
+穣	ngènh	
+穰	ngènh	
+蘘	ngènh	
+蠰	ngènh	
 嚷	ngệnh	
 讓	ngệnh	
 醸	ngệnh	
@@ -8253,7 +8253,7 @@
 靭	ngấn	
 韌	ngấn	
 廿	ngập	
-日	ngầt	
+日	ngẫt	
 日	ngật	
 氜	ngật	
 日	ngất	
@@ -8359,7 +8359,7 @@
 遇	ngụy	
 馭	ngụy	
 魏	ngụy	
-肉	ngùc	
+肉	ngũc	
 獄	ngục	
 玉	ngục	
 肉	ngục	
@@ -8400,7 +8400,7 @@
 醲	ngùng	
 顒	ngùng	
 蛹	ngụng	
-月	ngùt	
+月	ngũt	
 抈	ngụt	
 月	ngụt	
 焫	ngụt	
@@ -8430,7 +8430,7 @@
 稔	nẫm	
 菍	nẫm	
 淰	nầm	
-凹	nầp	
+凹	nẫp	
 凹	nấp	
 捏	nât	
 嬲	nứu	
@@ -8740,7 +8740,7 @@
 辟	pich	
 闢	pich	
 霹	pich	
-泵	pểm	
+泵	pẻm	
 伻	pình	
 便	pình	
 坪	pình	
@@ -8811,7 +8811,7 @@
 𨉯	pính	
 𩧢	pính	
 片	pỉnh	
-劈	pềc	
+劈	pễc	
 劈	pếc	
 踢	pếc	
 殍	piễu	
@@ -8841,14 +8841,14 @@
 瓶	pễnh	
 缾	pễnh	
 𩩍	pễnh	
-平	pềnh	
+平	pènh	
 坪	pểnh	
 丿	pềt	
 撇	pềt	
-撇	pết	
-氕	pết	
-撇	pêt	
-跛	pêt	
+撇	pét	
+氕	pét	
+撇	pet	
+跛	pet	
 婢	pỹ	
 睥	pỹ	
 脾	pỹ	
@@ -9030,7 +9030,7 @@
 脯	pủ	
 譜	pủ	
 鐠	pủ	
-仆	pùc	
+仆	pũc	
 仆	púc	
 仆	puc	
 湓	poãn	
@@ -9219,16 +9219,16 @@
 飭	sich	
 飾	sich	
 骰	sich	
-岑	sềm	
-忱	sềm	
-愖	sềm	
-森	sềm	
-涔	sềm	
-芩	sềm	
-諶	sềm	
-抋	sểm	
-沁	sểm	
-滲	sểm	
+岑	sèm	
+忱	sèm	
+愖	sèm	
+森	sèm	
+涔	sèm	
+芩	sèm	
+諶	sèm	
+抋	sẻm	
+沁	sẻm	
+滲	sẻm	
 升	sĩnh	
 丞	sình	
 乘	sình	
@@ -9281,16 +9281,16 @@
 𡕲	sính	
 𤳔	sính	
 升	sỉnh	
-澀	sêp	
-澁	sêp	
-㒊	sêp	
-炻	sềc	
-石	sềc	
-碩	sềc	
-祏	sềc	
-鼫	sềc	
-䂖	sềc	
-䄷	sềc	
+澀	sep	
+澁	sep	
+㒊	sep	
+炻	sễc	
+石	sễc	
+碩	sễc	
+祏	sễc	
+鼫	sễc	
+䂖	sễc	
+䄷	sễc	
 石	sệc	
 濕	sếc	
 勺	sêc	
@@ -9352,17 +9352,17 @@
 蒨	siến	
 騸	siến	
 聲	sễnh	
-倘	sềnh	
-償	sềnh	
-嘗	sềnh	
-城	sềnh	
-嫦	sềnh	
-常	sềnh	
-徜	sềnh	
-成	sềnh	
-甞	sềnh	
-裳	sềnh	
-鱨	sềnh	
+倘	sènh	
+償	sènh	
+嘗	sènh	
+城	sènh	
+嫦	sènh	
+常	sènh	
+徜	sènh	
+成	sènh	
+甞	sènh	
+裳	sènh	
+鱨	sènh	
 上	sệnh	
 尙	sệnh	
 尚	sệnh	
@@ -9395,13 +9395,13 @@
 揲	sềt	
 舌	sềt	
 鞨	sềt	
-折	sệt	
-蝕	sệt	
-色	sêt	
-虱	sêt	
-蝨	sêt	
-設	sêt	
-鯴	sêt	
+折	sẹt	
+蝕	sẹt	
+色	set	
+虱	set	
+蝨	set	
+設	set	
+鯴	set	
 市	sĩ	
 恃	sĩ	
 時	sĩ	
@@ -9622,7 +9622,7 @@
 說	súy	
 水	sủy	
 誰	sủy	
-縮	sùc	
+縮	sũc	
 塾	sục	
 孰	sục	
 屬	sục	
@@ -9815,22 +9815,22 @@
 讖	xiếm	
 詳	xễnh	
 青	xễnh	
-墻	xềnh	
-嬙	xềnh	
-庠	xềnh	
-廧	xềnh	
-戕	xềnh	
-晴	xềnh	
-暒	xềnh	
-檣	xềnh	
-爿	xềnh	
-牆	xềnh	
-祥	xềnh	
-羏	xềnh	
-翔	xềnh	
-艢	xềnh	
-薔	xềnh	
-詳	xềnh	
+墻	xènh	
+嬙	xènh	
+庠	xènh	
+廧	xènh	
+戕	xènh	
+晴	xènh	
+暒	xènh	
+檣	xènh	
+爿	xènh	
+牆	xènh	
+祥	xènh	
+羏	xènh	
+翔	xènh	
+艢	xènh	
+薔	xènh	
+詳	xènh	
 嗆	xếnh	
 戧	xếnh	
 槍	xếnh	
@@ -9948,8 +9948,8 @@
 綵	xỏi	
 茝	xỏi	
 采	xỏi	
-鑿	xòc	
-雹	xòc	
+鑿	xõc	
+雹	xõc	
 攛	xón	
 爨	xón	
 躥	xón	
@@ -10170,7 +10170,7 @@
 膇	úy	
 錞	úy	
 鐓	úy	
-嗝	ùc	
+嗝	ũc	
 毒	ục	
 獨	ục	
 碡	ục	
@@ -10261,7 +10261,7 @@
 董	ủng	
 㧬	ủng	
 𢫨	ủng	
-突	ùt	
+突	ũt	
 凸	ụt	
 奪	ụt	
 突	ụt	
@@ -10299,8 +10299,8 @@
 耲	vài	
 壞	vại	
 歪	vải	
-劃	vàc	
-畫	vàc	
+劃	vẵc	
+畫	vẵc	
 划	vạc	
 劃	vạc	
 惐	vạc	
@@ -10489,8 +10489,8 @@
 𢑥	vọi	
 煨	vói	
 穢	vói	
-鍋	vòc	
-鑊	vòc	
+鍋	võc	
+鑊	võc	
 劐	vọc	
 彠	vọc	
 獲	vọc	
@@ -10646,7 +10646,7 @@
 蘊	voản	
 醞	voản	
 韞	voản	
-核	vùt	
+核	vũt	
 煀	vút	
 尉	vut	
 屈	vut	
@@ -10692,7 +10692,7 @@
 躧	slải	
 𨑭	slải	
 𩌦	slải	
-噻	slàc	
+噻	slẵc	
 噻	slac	
 塞	slac	
 揌	slac	
@@ -10786,7 +10786,7 @@
 㞕	slich	
 䱑	slich	
 𨇨	slich	
-糝	slểm	
+糝	slẻm	
 仙	slính	
 仚	slính	
 佡	slính	
@@ -10843,8 +10843,8 @@
 㝭	slỉnh	
 𢜫	slỉnh	
 𦔄	slỉnh	
-圾	slêp	
-颯	slêp	
+圾	slep	
+颯	slep	
 削	slếc	
 惜	slếc	
 錫	slếc	
@@ -10919,7 +10919,7 @@
 鎪	slẩu	
 颼	slẩu	
 䬒	slẩu	
-楔	sliềp	
+楔	sliễp	
 揳	sliếp	
 楔	sliếp	
 四	slỹ	
@@ -10964,7 +10964,7 @@
 鰓	slói	
 髄	slỏi	
 髓	slỏi	
-索	slòc	
+索	slõc	
 索	sloc	
 蒜	slõn	
 狻	slón	
@@ -11256,7 +11256,7 @@
 野	yé	
 爹	yẻ	
 爺	yẻ	
-翼	yìch	
+翼	yĩch	
 亦	yịch	
 埸	yịch	
 奕	yịch	
@@ -11395,9 +11395,9 @@
 郢	yỉnh	
 𣤵	yỉnh	
 𣻯	yỉnh	
-葯	yềc	
-藥	yềc	
-䶳	yềc	
+葯	yễc	
+藥	yễc	
+䶳	yễc	
 亦	yệc	
 吁	yệc	
 瀹	yệc	
@@ -11540,27 +11540,27 @@
 氧	yễnh	
 癢	yễnh	
 養	yễnh	
-佯	yềnh	
-垟	yềnh	
-徉	yềnh	
-揚	yềnh	
-暘	yềnh	
-楊	yềnh	
-氜	yềnh	
-洋	yềnh	
-烊	yềnh	
-煬	yềnh	
-瑒	yềnh	
-瘍	yềnh	
-羊	yềnh	
-羏	yềnh	
-蛘	yềnh	
-蝆	yềnh	
-贏	yềnh	
-鍚	yềnh	
-鐊	yềnh	
-陽	yềnh	
-颺	yềnh	
+佯	yènh	
+垟	yènh	
+徉	yènh	
+揚	yènh	
+暘	yènh	
+楊	yènh	
+氜	yènh	
+洋	yènh	
+烊	yènh	
+煬	yènh	
+瑒	yènh	
+瘍	yènh	
+羊	yènh	
+羏	yènh	
+蛘	yènh	
+蝆	yènh	
+贏	yènh	
+鍚	yènh	
+鐊	yènh	
+陽	yènh	
+颺	yènh	
 恙	yệnh	
 樣	yệnh	
 漾	yệnh	
@@ -11579,12 +11579,12 @@
 䱀	yếnh	
 影	yểnh	
 鞅	yểnh	
-擖	yiềp	
-枼	yiềp	
-枽	yiềp	
-楪	yiềp	
-葉	yiềp	
-頁	yiềp	
+擖	yiễp	
+枼	yiễp	
+枽	yiễp	
+楪	yiễp	
+葉	yiễp	
+頁	yiễp	
 葉	yiệp	
 腌	yiếp	
 予	yĩ	
@@ -11696,43 +11696,43 @@
 豫	yị	
 預	yị	
 飫	yị	
-于	yí	
-伊	yí	
-依	yí	
-咿	yí	
-噫	yí	
-意	yí	
-扆	yí	
-於	yí	
-栘	yí	
-椅	yí	
-殪	yí	
-漪	yí	
-犄	yí	
-猗	yí	
-玗	yí	
-畬	yí	
-瘞	yí	
-瞖	yí	
-禕	yí	
-竽	yí	
-篒	yí	
-紆	yí	
-繄	yí	
-翳	yí	
-菸	yí	
-薏	yí	
-衣	yí	
-觭	yí	
-迂	yí	
-醫	yí	
-銥	yí	
-鐿	yí	
-餏	yí	
-饐	yí	
-鷖	yí	
-鷾	yí	
-黟	yí	
+于	í	
+伊	í	
+依	í	
+咿	í	
+噫	í	
+意	í	
+扆	í	
+於	í	
+栘	í	
+椅	í	
+殪	í	
+漪	í	
+犄	í	
+猗	í	
+玗	í	
+畬	í	
+瘞	í	
+瞖	í	
+禕	í	
+竽	í	
+篒	í	
+紆	í	
+繄	í	
+翳	í	
+菸	í	
+薏	í	
+衣	í	
+觭	í	
+迂	í	
+醫	í	
+銥	í	
+鐿	í	
+餏	í	
+饐	í	
+鷖	í	
+鷾	í	
+黟	í	
 依	yỉ	
 倚	yỉ	
 傴	yỉ	
