--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -2734,8 +2734,8 @@
 靑	xênh	
 青	xênh	
 請	xểnh	
-夝	xềnh	
-晴	xềnh	
+夝	xènh	
+晴	xènh	
 㜠	xuy	
 㸖	xuy	
 㿐	xuy	
@@ -5399,8 +5399,8 @@
 柮	đut	
 胐	đut	
 飿	đut	
-掉	đệu	
-調	đệu	
+掉	đẹo	
+調	đẹo	
 啲	đi	
 㠃	đich	
 㢩	đich	
@@ -9926,79 +9926,79 @@
 跼	kục	
 輂	kục	
 鋦	kục	
-倌	kun	
-冠	kun	
-官	kun	
-棺	kun	
-欟	kun	
-涫	kun	
-窤	kun	
-莞	kun	
-萖	kun	
-蒄	kun	
-覌	kun	
-観	kun	
-觀	kun	
-𣻻	kun	
-𥕜	kun	
-䏓	kủn	
-䗆	kủn	
-䘾	kủn	
-䦎	kủn	
-䩪	kủn	
-䪀	kủn	
-䲘	kủn	
-悹	kủn	
-悺	kủn	
-斡	kủn	
-朊	kủn	
-琯	kủn	
-璭	kủn	
-痯	kủn	
-盥	kủn	
-筦	kủn	
-管	kủn	
-脘	kủn	
-舘	kủn	
-莞	kủn	
-輨	kủn	
-錧	kủn	
-館	kủn	
-𤪔	kủn	
-𩸘	kủn	
-㮡	kún	
-㴦	kún	
-䗰	kún	
-䝺	kún	
-冠	kún	
-悺	kún	
-棺	kún	
-樌	kún	
-毌	kún	
-泴	kún	
-涫	kún	
-淉	kún	
-潅	kún	
-灌	kún	
-爟	kún	
-瓘	kún	
-盥	kún	
-矔	kún	
-礶	kún	
-祼	kún	
-罆	kún	
-罐	kún	
-觀	kún	
-貫	kún	
-鏆	kún	
-鑵	kún	
-雚	kún	
-鱹	kún	
-鸛	kún	
-𠍿	kún	
-𤎽	kún	
-𥖏	kún	
-貫	kún	
+倌	quôn	
+冠	quôn	
+官	quôn	
+棺	quôn	
+欟	quôn	
+涫	quôn	
+窤	quôn	
+莞	quôn	
+萖	quôn	
+蒄	quôn	
+覌	quôn	
+観	quôn	
+觀	quôn	
+𣻻	quôn	
+𥕜	quôn	
+䏓	quổn	
+䗆	quổn	
+䘾	quổn	
+䦎	quổn	
+䩪	quổn	
+䪀	quổn	
+䲘	quổn	
+悹	quổn	
+悺	quổn	
+斡	quổn	
+朊	quổn	
+琯	quổn	
+璭	quổn	
+痯	quổn	
+盥	quổn	
+筦	quổn	
+管	quổn	
+脘	quổn	
+舘	quổn	
+莞	quổn	
+輨	quổn	
+錧	quổn	
+館	quổn	
+𤪔	quổn	
+𩸘	quổn	
+㮡	quốn	
+㴦	quốn	
+䗰	quốn	
+䝺	quốn	
+冠	quốn	
+悺	quốn	
+棺	quốn	
+樌	quốn	
+毌	quốn	
+泴	quốn	
+涫	quốn	
+淉	quốn	
+潅	quốn	
+灌	quốn	
+爟	quốn	
+瓘	quốn	
+盥	quốn	
+矔	quốn	
+礶	quốn	
+祼	quốn	
+罆	quốn	
+罐	quốn	
+觀	quốn	
+貫	quốn	
+鏆	quốn	
+鑵	quốn	
+雚	quốn	
+鱹	quốn	
+鸛	quốn	
+𠍿	quốn	
+𤎽	quốn	
+𥖏	quốn	
+貫	quốn	
 㒶	kung	
 㓚	kung	
 㓛	kung	
@@ -10083,7 +10083,7 @@
 䳍	kụng	
 共	kụng	
 嗗	kủt	
-嗗	kùt	
+嗗	kũt	
 嗗	kụt	
 㧓	qua	
 䒷	qua	
@@ -13902,7 +13902,7 @@
 廿	yẹ	
 鵺	yẹ	
 影	yểnh	
-贏	yềnh	
+贏	yènh	
 嬃	yui	
 錐	yui	
 䅑	yùi	
@@ -13963,65 +13963,65 @@
 潤	yụn	
 閏	yụn	
 閠	yụn	
-㐆	yi	
-㛄	yi	
-㥋	yi	
-㳖	yi	
-㾨	yi	
-㿲	yi	
-䃜	yi	
-䒾	yi	
-䚷	yi	
-䝝	yi	
-䧇	yi	
-䪰	yi	
-䫑	yi	
-䫯	yi	
-伊	yi	
-依	yi	
-医	yi	
-吚	yi	
-咿	yi	
-噫	yi	
-她	yi	
-姨	yi	
-嫛	yi	
-悘	yi	
-椅	yi	
-檹	yi	
-欹	yi	
-毉	yi	
-洢	yi	
-渏	yi	
-漪	yi	
-猗	yi	
-瑿	yi	
-畩	yi	
-禕	yi	
-稦	yi	
-繄	yi	
-翳	yi	
-蛜	yi	
-衣	yi	
-譩	yi	
-郼	yi	
-醫	yi	
-銥	yi	
-鷖	yi	
-黟	yi	
-黳	yi	
-𠲖	yi	
-𠵱	yi	
-𡄵	yi	
-𡛂	yi	
-𢒼	yi	
-𣐿	yi	
-𤨦	yi	
-𦲤	yi	
-𦴣	yi	
-𦸒	yi	
-𩂱	yi	
-𪘲	yi	
+㐆	i	
+㛄	i	
+㥋	i	
+㳖	i	
+㾨	i	
+㿲	i	
+䃜	i	
+䒾	i	
+䚷	i	
+䝝	i	
+䧇	i	
+䪰	i	
+䫑	i	
+䫯	i	
+伊	i	
+依	i	
+医	i	
+吚	i	
+咿	i	
+噫	i	
+她	i	
+姨	i	
+嫛	i	
+悘	i	
+椅	i	
+檹	i	
+欹	i	
+毉	i	
+洢	i	
+渏	i	
+漪	i	
+猗	i	
+瑿	i	
+畩	i	
+禕	i	
+稦	i	
+繄	i	
+翳	i	
+蛜	i	
+衣	i	
+譩	i	
+郼	i	
+醫	i	
+銥	i	
+鷖	i	
+黟	i	
+黳	i	
+𠲖	i	
+𠵱	i	
+𡄵	i	
+𡛂	i	
+𢒼	i	
+𣐿	i	
+𤨦	i	
+𦲤	i	
+𦴣	i	
+𦸒	i	
+𩂱	i	
+𪘲	i	
 㕈	yỉ	
 㫊	yỉ	
 㰻	yỉ	
@@ -14873,65 +14873,65 @@
 齴	yiện	
 𡷹	yiện	
 𩃀	yiện	
-㖜	yinh	
-䁐	yinh	
-䊔	yinh	
-䋝	yinh	
-䣐	yinh	
-䦫	yinh	
-䧹	yinh	
-䨉	yinh	
-偀	yinh	
-啨	yinh	
-嚶	yinh	
-央	yinh	
-媖	yinh	
-嫈	yinh	
-嬰	yinh	
-孆	yinh	
-孾	yinh	
-愥	yinh	
-應	yinh	
-攖	yinh	
-朠	yinh	
-桜	yinh	
-櫻	yinh	
-渶	yinh	
-瀴	yinh	
-煐	yinh	
-珱	yinh	
-瑛	yinh	
-瓔	yinh	
-碤	yinh	
-礯	yinh	
-緓	yinh	
-纓	yinh	
-绬	yinh	
-膺	yinh	
-英	yinh	
-蘡	yinh	
-蝧	yinh	
-蠳	yinh	
-譍	yinh	
-譻	yinh	
-賏	yinh	
-鑍	yinh	
-霙	yinh	
-韹	yinh	
-韺	yinh	
-鶧	yinh	
-鷹	yinh	
-鸚	yinh	
-𠸄	yinh	
-𡎘	yinh	
-𡢞	yinh	
-𨰃	yinh	
-𩤯	yinh	
-𪃳	yinh	
-呎	yinh xếc	
-吋	yinh xoán	
-啢	yinh lưởng	
-𠺖	yinh mẫu	
+㖜	inh		
+䁐	inh		
+䊔	inh		
+䋝	inh		
+䣐	inh		
+䦫	inh		
+䧹	inh		
+䨉	inh		
+偀	inh		
+啨	inh		
+嚶	inh		
+央	inh		
+媖	inh		
+嫈	inh		
+嬰	inh		
+孆	inh		
+孾	inh		
+愥	inh		
+應	inh		
+攖	inh		
+朠	inh		
+桜	inh		
+櫻	inh		
+渶	inh		
+瀴	inh		
+煐	inh		
+珱	inh		
+瑛	inh		
+瓔	inh		
+碤	inh		
+礯	inh		
+緓	inh		
+纓	inh		
+绬	inh		
+膺	inh		
+英	inh		
+蘡	inh		
+蝧	inh		
+蠳	inh		
+譍	inh		
+譻	inh		
+賏	inh		
+鑍	inh		
+霙	inh		
+韹	inh		
+韺	inh		
+鶧	inh		
+鷹	inh		
+鸚	inh		
+𠸄	inh		
+𡎘	inh		
+𡢞	inh		
+𨰃	inh		
+𩤯	inh		
+𪃳	inh		
+呎	inh	 xếc	
+吋	inh	 xoán	
+啢	inh	 lưởng	
+𠺖	inh	 mẫu	
 㢍	yỉnh	
 㲟	yỉnh	
 䚆	yỉnh	
@@ -15887,45 +15887,45 @@
 砽	yụng	
 苚	yụng	
 𤰉	yụng	
-㚥	yư	
-㝼	yư	
-㪀	yư	
-㫇	yư	
-㫈	yư	
-㺮	yư	
-䆰	yư	
-䊸	yư	
-䨕	yư	
-䩽	yư	
-乻	yư	
-于	yư	
-亐	yư	
-凵	yư	
-吁	yư	
-唹	yư	
-扜	yư	
-扵	yư	
-於	yư	
-旕	yư	
-杅	yư	
-淤	yư	
-玗	yư	
-瘀	yư	
-盓	yư	
-穻	yư	
-竽	yư	
-箊	yư	
-紆	yư	
-芋	yư	
-虶	yư	
-衧	yư	
-込	yư	
-迂	yư	
-迃	yư	
-邘	yư	
-酑	yư	
-陓	yư	
-鯲	yư	
+㚥	ư	
+㝼	ư	
+㪀	ư	
+㫇	ư	
+㫈	ư	
+㺮	ư	
+䆰	ư	
+䊸	ư	
+䨕	ư	
+䩽	ư	
+乻	ư	
+于	ư	
+亐	ư	
+凵	ư	
+吁	ư	
+唹	ư	
+扜	ư	
+扵	ư	
+於	ư	
+旕	ư	
+杅	ư	
+淤	ư	
+玗	ư	
+瘀	ư	
+盓	ư	
+穻	ư	
+竽	ư	
+箊	ư	
+紆	ư	
+芋	ư	
+虶	ư	
+衧	ư	
+込	ư	
+迂	ư	
+迃	ư	
+邘	ư	
+酑	ư	
+陓	ư	
+鯲	ư	
 偊	yử	
 傴	yử	
 噢	yử	
@@ -17291,7 +17291,7 @@
 𠰠	khũy	
 𠳔	khũy	
 喼	khep	
-𠵇	khều	
+𠵇	khèo	
 揢	khich	
 棘	khich	
 欫	khich	
@@ -18992,8 +18992,8 @@
 𡃁	lênh	
 領	lểnh	
 靚	lếnh	
-靈	lềnh	
-鯪	lềnh	
+靈	lènh	
+鯪	lènh	
 岭	lễnh	
 嶺	lễnh	
 領	lễnh	
@@ -19338,7 +19338,7 @@
 𠷈	lụt	
 𤝽	lụt	
 𨀞	lụt	
-𠺫	lêu	
+𠺫	leo	
 哩	li	
 唎	li	
 𨉖	li	
@@ -21512,9 +21512,9 @@
 𥧌	mỵ	
 𧙕	mỵ	
 名	mểnh	
-名	mềnh	
+名	mènh	
 命	mệnh	
-喵	mêu	
+喵	meo	
 咪	mi	
 眯	mi	
 瞇	mi	
@@ -24447,8 +24447,8 @@
 𣖕	pênh	
 𩩍	pênh	
 𠝭	pểnh	
-平	pềnh	
-瓶	pềnh	
+平	pènh	
+瓶	pènh	
 噼	pet	
 坺	pẹt	
 㱸	pich	
@@ -25971,8 +25971,8 @@
 腥	sếnh	
 鉎	sếnh	
 鍟	sếnh	
-城	sềnh	
-成	sềnh	
+城	sènh	
+成	sènh	
 㥠	suy	
 㲤	suy	
 䇓	suy	
@@ -30511,34 +30511,34 @@
 曂	vọng	
 王	vọng	
 迋	vọng	
-㢪	vu	
-㮧	vu	
-䖚	vu	
-䡧	vu	
-嗚	vu	
-圬	vu	
-弙	vu	
-惡	vu	
-扵	vu	
-於	vu	
-杇	vu	
-歍	vu	
-汙	vu	
-汚	vu	
-污	vu	
-洿	vu	
-烏	vu	
-盓	vu	
-窏	vu	
-螐	vu	
-鄔	vu	
-釫	vu	
-鎢	vu	
-陓	vu	
-靰	vu	
-鰞	vu	
-鴮	vu	
-𠌥	vu	
+㢪	u	
+㮧	u	
+䖚	u	
+䡧	u	
+嗚	u	
+圬	u	
+弙	u	
+惡	u	
+扵	u	
+於	u	
+杇	u	
+歍	u	
+汙	u	
+汚	u	
+污	u	
+洿	u	
+烏	u	
+盓	u	
+窏	u	
+螐	u	
+鄔	u	
+釫	u	
+鎢	u	
+陓	u	
+靰	u	
+鰞	u	
+鴮	u	
+𠌥	u	
 䃖	vủ	
 䛩	vủ	
 塢	vủ	
