--- a/quocnguytihoisanva.dict.yaml
+++ b/quocnguytihoisanva.dict.yaml
@@ -1,6 +1,3 @@
-#The recommended spelling form of Hoisanese Romanization 台山話國語字書寫建議體Hòi Sán Vạ Quóc Ngũy Tụ Si Slẻ Kính Ngỵ Hảy#
-#version: 19/03/2025
-#author: cathaylab
 丫	ã	
 椏	ã	
 呀	ạ	
@@ -93,24 +90,24 @@
 軛	ẵc	
 軶	ẵc	
 鐲	ẵc	
-揳	ặc	
-特	ặc	
-螣	ặc	
-蟘	ặc	
-得	ắc	
-扼	ắc	
-握	ắc	
-厄	ăc	
-呃	ăc	
-幄	ăc	
-得	ăc	
-德	ăc	
-扼	ăc	
-握	ăc	
-渥	ăc	
-苊	ăc	
-鍀	ăc	
-㝵	ăc	
+揳	ạc	
+特	ạc	
+螣	ạc	
+蟘	ạc	
+得	ác	
+扼	ác	
+握	ác	
+厄	ac	
+呃	ac	
+幄	ac	
+得	ac	
+德	ac	
+扼	ac	
+握	ac	
+渥	ac	
+苊	ac	
+鍀	ac	
+㝵	ac	
 啖	ạm	
 氮	ạm	
 淡	ạm	
@@ -316,19 +313,19 @@
 擺	bải	
 跛	bải	
 伯	bẵc	
-僰	bặc	
-匐	bặc	
-卜	bặc	
-帛	bặc	
-白	bặc	
-百	bặc	
-蔔	bặc	
-鮊	bặc	
-佰	bắc	
-百	bắc	
-伯	băc	
-北	băc	
-百	băc	
+僰	bạc	
+匐	bạc	
+卜	bạc	
+帛	bạc	
+白	bạc	
+百	bạc	
+蔔	bạc	
+鮊	bạc	
+佰	bác	
+百	bác	
+伯	bac	
+北	bac	
+百	bac	
 扮	bạn	
 湴	bạn	
 爿	bạn	
@@ -801,9 +798,9 @@
 鏷	bục	
 卜	buc	
 卟	buc	
-坌	bụn	
-夯	bụn	
-笨	bụn	
+坌	boạn	
+夯	boạn	
+笨	boạn	
 崩	búng	
 蒙	búng	
 捧	bủng	
@@ -860,16 +857,16 @@
 跴	trải	
 踩	trải	
 踹	trải	
-坼	trắc	
-拆	trắc	
-冊	trăc	
-惻	trăc	
-擦	trăc	
-敇	trăc	
-柵	trăc	
-測	trăc	
-策	trăc	
-筴	trăc	
+坼	trác	
+拆	trác	
+冊	trac	
+惻	trac	
+擦	trac	
+敇	trac	
+柵	trac	
+測	trac	
+策	trac	
+筴	trac	
 讒	tràm	
 篸	trảm	
 剗	trản	
@@ -1239,34 +1236,34 @@
 蓄	truc	
 觸	truc	
 豖	truc	
-串	trũn	
-膥	trũn	
-傳	trùn	
-串	trún	
-巛	trún	
-川	trún	
-攢	trún	
-旾	trún	
-春	trún	
-椿	trún	
-氚	trún	
-汌	trún	
-穿	trún	
-蝽	trún	
-釧	trún	
-鰆	trún	
-喘	trủn	
-忖	trủn	
-揣	trủn	
-湍	trủn	
-猯	trủn	
-篅	trủn	
-舛	trủn	
-蠢	trủn	
-貒	trủn	
-踳	trủn	
-遄	trủn	
-䦟	trủn	
+串	troãn	
+膥	troãn	
+傳	troàn	
+串	troán	
+巛	troán	
+川	troán	
+攢	troán	
+旾	troán	
+春	troán	
+椿	troán	
+氚	troán	
+汌	troán	
+穿	troán	
+蝽	troán	
+釧	troán	
+鰆	troán	
+喘	troản	
+忖	troản	
+揣	troản	
+湍	troản	
+猯	troản	
+篅	troản	
+舛	troản	
+蠢	troản	
+貒	troản	
+踳	troản	
+遄	troản	
+䦟	troản	
 涌	trũng	
 蟲	trũng	
 种	trùng	
@@ -1328,13 +1325,13 @@
 賫	tải	
 躋	tải	
 齎	tải	
-自	tặc	
-則	tắc	
-得	tắc	
-則	tăc	
-嘚	tăc	
-襶	tăc	
-鯽	tăc	
+自	tạc	
+則	tác	
+得	tác	
+則	tac	
+嘚	tac	
+襶	tac	
+鯽	tac	
 昨	tãm	
 蘸	tạm	
 簪	tám	
@@ -1786,34 +1783,34 @@
 足	túc	
 浞	tuc	
 足	tuc	
-樽	tũn	
-罇	tũn	
-扽	tụn	
-俊	tún	
-尊	tún	
-峻	tún	
-悛	tún	
-搢	tún	
-撙	tún	
-晉	tún	
-朘	tún	
-浚	tún	
-濬	tún	
-焌	tún	
-皴	tún	
-稕	tún	
-竣	tún	
-縉	tún	
-縉	tún	
-脧	tún	
-蹲	tún	
-逡	tún	
-遵	tún	
-鐫	tún	
-雋	tún	
-餕	tún	
-駿	tún	
-鱒	tún	
+樽	toãn	
+罇	toãn	
+扽	toạn	
+俊	toán	
+尊	toán	
+峻	toán	
+悛	toán	
+搢	toán	
+撙	toán	
+晉	toán	
+朘	toán	
+浚	toán	
+濬	toán	
+焌	toán	
+皴	toán	
+稕	toán	
+竣	toán	
+縉	toán	
+縉	toán	
+脧	toán	
+蹲	toán	
+逡	toán	
+遵	toán	
+鐫	toán	
+雋	toán	
+餕	toán	
+駿	toán	
+鱒	toán	
 粽	tũng	
 糉	tũng	
 糭	tũng	
@@ -2097,7 +2094,7 @@
 快	phái	
 筷	phái	
 駃	phái	
-撥	phăc	
+撥	phac	
 幡	phãn	
 瓣	phãn	
 畈	phãn	
@@ -2478,61 +2475,61 @@
 輻	phuc	
 馥	phuc	
 鰒	phuc	
-僨	phũn	
-奮	phũn	
-忿	phũn	
-憤	phũn	
-瀵	phũn	
-糞	phũn	
-鱝	phũn	
-垣	phùn	
-墳	phùn	
-桓	phùn	
-汾	phùn	
-洹	phùn	
-濆	phùn	
-焚	phùn	
-萑	phùn	
-蚠	phùn	
-蚡	phùn	
-豶	phùn	
-賁	phùn	
-鼢	phùn	
-份	phụn	
-分	phụn	
-坌	phụn	
-分	phún	
-勛	phún	
-勳	phún	
-吩	phún	
-塤	phún	
-壎	phún	
-婚	phún	
-惛	phún	
-昏	phún	
-曛	phún	
-棼	phún	
-氛	phún	
-涽	phún	
-湣	phún	
-煇	phún	
-熏	phún	
-燻	phún	
-獯	phún	
-玢	phún	
-瞓	phún	
-窨	phún	
-糞	phún	
-紛	phún	
-芬	phún	
-葷	phún	
-薰	phún	
-訓	phún	
-酚	phún	
-醺	phún	
-閽	phún	
-䎜	phún	
-粉	phủn	
+僨	phoãn	
+奮	phoãn	
+忿	phoãn	
+憤	phoãn	
+瀵	phoãn	
+糞	phoãn	
+鱝	phoãn	
+垣	phoàn	
+墳	phoàn	
+桓	phoàn	
+汾	phoàn	
+洹	phoàn	
+濆	phoàn	
+焚	phoàn	
+萑	phoàn	
+蚠	phoàn	
+蚡	phoàn	
+豶	phoàn	
+賁	phoàn	
+鼢	phoàn	
+份	phoạn	
+分	phoạn	
+坌	phoạn	
+分	phoán	
+勛	phoán	
+勳	phoán	
+吩	phoán	
+塤	phoán	
+壎	phoán	
+婚	phoán	
+惛	phoán	
+昏	phoán	
+曛	phoán	
+棼	phoán	
+氛	phoán	
+涽	phoán	
+湣	phoán	
+煇	phoán	
+熏	phoán	
+燻	phoán	
+獯	phoán	
+玢	phoán	
+瞓	phoán	
+窨	phoán	
+糞	phoán	
+紛	phoán	
+芬	phoán	
+葷	phoán	
+薰	phoán	
+訓	phoán	
+酚	phoán	
+醺	phoán	
+閽	phoán	
+䎜	phoán	
+粉	phoản	
 摓	phùng	
 渢	phùng	
 漨	phùng	
@@ -2720,20 +2717,20 @@
 解	kải	
 觧	kải	
 格	kẵc	
-嗝	kắc	
-摑	kắc	
-滆	kắc	
-膈	kắc	
-鎘	kắc	
-隔	kắc	
-鬲	kắc	
-塥	kăc	
-格	kăc	
-緙	kăc	
-胳	kăc	
-革	kăc	
-韚	kăc	
-骼	kăc	
+嗝	kác	
+摑	kác	
+滆	kác	
+膈	kác	
+鎘	kác	
+隔	kác	
+鬲	kác	
+塥	kac	
+格	kac	
+緙	kac	
+胳	kac	
+革	kac	
+韚	kac	
+骼	kac	
 柑	kãm	
 坩	kám	
 尲	kám	
@@ -3596,51 +3593,51 @@
 鞫	kuc	
 頊	kuc	
 鵠	kuc	
-丨	kũn	
-棍	kũn	
-竿	kũn	
-輥	kũn	
-倦	kụn	
-捃	kụn	
-珺	kụn	
-郡	kụn	
-君	kún	
-均	kún	
-娟	kún	
-捐	kún	
-昀	kún	
-昆	kún	
-涓	kún	
-狷	kún	
-畇	kún	
-皸	kún	
-眷	kún	
-睠	kún	
-筠	kún	
-絹	kún	
-罥	kún	
-羂	kún	
-蜎	kún	
-蜵	kún	
-蠲	kún	
-裩	kún	
-褌	kún	
-身	kún	
-軍	kún	
-鄄	kún	
-鈞	kún	
-鋆	kún	
-鵑	kún	
-龜	kún	
-悃	kủn	
-滾	kủn	
-磙	kủn	
-袞	kủn	
-裷	kủn	
-錈	kủn	
-鬈	kủn	
-鮌	kủn	
-鯀	kủn	
+丨	koãn	
+棍	koãn	
+竿	koãn	
+輥	koãn	
+倦	koạn	
+捃	koạn	
+珺	koạn	
+郡	koạn	
+君	koán	
+均	koán	
+娟	koán	
+捐	koán	
+昀	koán	
+昆	koán	
+涓	koán	
+狷	koán	
+畇	koán	
+皸	koán	
+眷	koán	
+睠	koán	
+筠	koán	
+絹	koán	
+罥	koán	
+羂	koán	
+蜎	koán	
+蜵	koán	
+蠲	koán	
+裩	koán	
+褌	koán	
+身	koán	
+軍	koán	
+鄄	koán	
+鈞	koán	
+鋆	koán	
+鵑	koán	
+龜	koán	
+悃	koản	
+滾	koản	
+磙	koản	
+袞	koản	
+裷	koản	
+錈	koản	
+鬈	koản	
+鮌	koản	
+鯀	koản	
 公	kũng	
 共	kụng	
 供	kúng	
@@ -3837,21 +3834,21 @@
 醍	hải	
 骵	hải	
 體	hải	
-唬	hắc	
-嚇	hắc	
-客	hắc	
-克	hăc	
-刻	hăc	
-剋	hăc	
-可	hăc	
-喀	hăc	
-客	hăc	
-揢	hăc	
-氪	hăc	
-緙	hăc	
-赫	hăc	
-黑	hăc	
-黒	hăc	
+唬	hác	
+嚇	hác	
+客	hác	
+克	hac	
+刻	hac	
+剋	hac	
+可	hac	
+喀	hac	
+客	hac	
+揢	hac	
+氪	hac	
+緙	hac	
+赫	hac	
+黑	hac	
+黒	hac	
 凼	hãm	
 毯	hãm	
 蟫	hãm	
@@ -4787,35 +4784,35 @@
 鵠	hục	
 哭	húc	
 哭	huc	
-券	hũn	
-圈	hũn	
-屯	hũn	
-桊	hũn	
-盾	hũn	
-屯	hùn	
-篿	hùn	
-臀	hùn	
-臋	hùn	
-豚	hùn	
-券	hún	
-勸	hún	
-吞	hún	
-呑	hún	
-暾	hún	
-氽	hún	
-獻	hún	
-禤	hún	
-綣	hún	
-鈍	hún	
-飩	hún	
-圈	hủn	
-圏	hủn	
-桊	hủn	
-棬	hủn	
-犬	hủn	
-甽	hủn	
-畎	hủn	
-𧨸	hủn	
+券	hoãn	
+圈	hoãn	
+屯	hoãn	
+桊	hoãn	
+盾	hoãn	
+屯	hoàn	
+篿	hoàn	
+臀	hoàn	
+臋	hoàn	
+豚	hoàn	
+券	hoán	
+勸	hoán	
+吞	hoán	
+呑	hoán	
+暾	hoán	
+氽	hoán	
+獻	hoán	
+禤	hoán	
+綣	hoán	
+鈍	hoán	
+飩	hoán	
+圈	hoản	
+圏	hoản	
+桊	hoản	
+棬	hoản	
+犬	hoản	
+甽	hoản	
+畎	hoản	
+𧨸	hoản	
 筒	hũng	
 筩	hũng	
 紅	hũng	
@@ -5015,36 +5012,36 @@
 齏	chái	
 䱥	chái	
 𢮓	chái	
-宅	chặc	
-摘	chặc	
-擇	chặc	
-擲	chặc	
-澤	chặc	
-矺	chặc	
-砸	chặc	
-磔	chặc	
-翟	chặc	
-蠌	chặc	
-謫	chặc	
-蹢	chặc	
-躑	chặc	
-岞	chắc	
-柞	chắc	
-窄	chắc	
-笮	chắc	
-舴	chắc	
-虴	chắc	
-迮	chắc	
-側	chăc	
-嘖	chăc	
-幘	chăc	
-溭	chăc	
-笮	chăc	
-簀	chăc	
-蔶	chăc	
-責	chăc	
-賾	chăc	
-㺓	chăc	
+宅	chạc	
+摘	chạc	
+擇	chạc	
+擲	chạc	
+澤	chạc	
+矺	chạc	
+砸	chạc	
+磔	chạc	
+翟	chạc	
+蠌	chạc	
+謫	chạc	
+蹢	chạc	
+躑	chạc	
+岞	chác	
+柞	chác	
+窄	chác	
+笮	chác	
+舴	chác	
+虴	chác	
+迮	chác	
+側	chac	
+嘖	chac	
+幘	chac	
+溭	chac	
+笮	chac	
+簀	chac	
+蔶	chac	
+責	chac	
+賾	chac	
+㺓	chac	
 暫	chạm	
 站	chạm	
 鏨	chạm	
@@ -5600,15 +5597,15 @@
 築	chuc	
 粥	chuc	
 鬻	chuc	
-圳	chụn	
-汌	chụn	
-汌	chụn	
-津	chụn	
-准	chủn	
-埻	chủn	
-準	chủn	
-隼	chủn	
-鶽	chủn	
+圳	choạn	
+汌	choạn	
+汌	choạn	
+津	choạn	
+准	choản	
+埻	choản	
+準	choản	
+隼	choản	
+鶽	choản	
 盅	chũng	
 仲	chụng	
 重	chụng	
@@ -5689,9 +5686,9 @@
 䏿	khải	
 卡	khẵc	
 咯	khẵc	
-卡	khắc	
-卡	khăc	
-旮	khăc	
+卡	khác	
+卡	khac	
+旮	khac	
 冚	khảm	
 夼	khãnh	
 框	khãnh	
@@ -6137,53 +6134,53 @@
 蛐	khuc	
 麯	khuc	
 麴	khuc	
-菌	khũn	
-輥	khũn	
-啳	khùn	
-帬	khùn	
-惓	khùn	
-拳	khùn	
-權	khùn	
-羣	khùn	
-群	khùn	
-蜷	khùn	
-裙	khùn	
-裠	khùn	
-跧	khùn	
-踡	khùn	
-顴	khùn	
-鬈	khùn	
-麇	khùn	
-麕	khùn	
-僒	khún	
-困	khún	
-囷	khún	
-坤	khún	
-崐	khún	
-崑	khún	
-昆	khún	
-晜	khún	
-琨	khún	
-睏	khún	
-窘	khún	
-醌	khún	
-錕	khún	
-髡	khún	
-鯤	khún	
-鵾	khún	
-䖵	khún	
-卷	khủn	
-壼	khủn	
-悃	khủn	
-捃	khủn	
-捆	khủn	
-捲	khủn	
-綣	khủn	
-緄	khủn	
-菌	khủn	
-閫	khủn	
-麇	khủn	
-麏	khủn	
+菌	khoãn	
+輥	khoãn	
+啳	khoàn	
+帬	khoàn	
+惓	khoàn	
+拳	khoàn	
+權	khoàn	
+羣	khoàn	
+群	khoàn	
+蜷	khoàn	
+裙	khoàn	
+裠	khoàn	
+跧	khoàn	
+踡	khoàn	
+顴	khoàn	
+鬈	khoàn	
+麇	khoàn	
+麕	khoàn	
+僒	khoán	
+困	khoán	
+囷	khoán	
+坤	khoán	
+崐	khoán	
+崑	khoán	
+昆	khoán	
+晜	khoán	
+琨	khoán	
+睏	khoán	
+窘	khoán	
+醌	khoán	
+錕	khoán	
+髡	khoán	
+鯤	khoán	
+鵾	khoán	
+䖵	khoán	
+卷	khoản	
+壼	khoản	
+悃	khoản	
+捃	khoản	
+捆	khoản	
+捲	khoản	
+綣	khoản	
+緄	khoản	
+菌	khoản	
+閫	khoản	
+麇	khoản	
+麏	khoản	
 龹	khunduhẩu	
 窮	khũng	
 穹	khùng	
@@ -6302,17 +6299,17 @@
 癩	lái	
 孻	lải	
 勒	lẵc	
-仂	lặc	
-勒	lặc	
-叻	lặc	
-泐	lặc	
-肋	lặc	
-褦	lặc	
-鰳	lặc	
-嘞	lắc	
-簕	lắc	
-肋	lắc	
-旯	lăc	
+仂	lạc	
+勒	lạc	
+叻	lạc	
+泐	lạc	
+肋	lạc	
+褦	lạc	
+鰳	lạc	
+嘞	lác	
+簕	lác	
+肋	lác	
+旯	lac	
 壈	lãm	
 檻	lãm	
 灠	lãm	
@@ -7038,37 +7035,37 @@
 碌	luc	
 磟	luc	
 麓	luc	
-輪	lũn	
-侖	lùn	
-倫	lùn	
-圇	lùn	
-孌	lùn	
-孿	lùn	
-崘	lùn	
-崙	lùn	
-巒	lùn	
-掄	lùn	
-欒	lùn	
-淪	lùn	
-灤	lùn	
-綸	lùn	
-羉	lùn	
-聯	lùn	
-菕	lùn	
-論	lùn	
-輪	lùn	
-鑾	lùn	
-鸞	lùn	
-吝	lụn	
-恡	lụn	
-紊	lụn	
-藺	lụn	
-論	lụn	
-蹸	lụn	
-躪	lụn	
-攣	lún	
-戀	lủn	
-臠	lủn	
+輪	loãn	
+侖	loàn	
+倫	loàn	
+圇	loàn	
+孌	loàn	
+孿	loàn	
+崘	loàn	
+崙	loàn	
+巒	loàn	
+掄	loàn	
+欒	loàn	
+淪	loàn	
+灤	loàn	
+綸	loàn	
+羉	loàn	
+聯	loàn	
+菕	loàn	
+論	loàn	
+輪	loàn	
+鑾	loàn	
+鸞	loàn	
+吝	loạn	
+恡	loạn	
+紊	loạn	
+藺	loạn	
+論	loạn	
+蹸	loạn	
+躪	loạn	
+攣	loán	
+戀	loản	
+臠	loản	
 壟	lũng	
 壠	lũng	
 槞	lũng	
@@ -7230,25 +7227,25 @@
 米	mải	
 脒	mải	
 墨	mẵc	
-冒	mặc	
-嘿	mặc	
-嚜	mặc	
-墨	mặc	
-獏	mặc	
-脈	mặc	
-萬	mặc	
-蛨	mặc	
-貉	mặc	
-貊	mặc	
-貘	mặc	
-陌	mặc	
-驀	mặc	
-麥	mặc	
-默	mặc	
-擘	mắc	
-脈	mắc	
-嘜	măc	
-嚜	măc	
+冒	mạc	
+嘿	mạc	
+嚜	mạc	
+墨	mạc	
+獏	mạc	
+脈	mạc	
+萬	mạc	
+蛨	mạc	
+貉	mạc	
+貊	mạc	
+貘	mạc	
+陌	mạc	
+驀	mạc	
+麥	mạc	
+默	mạc	
+擘	mác	
+脈	mác	
+嘜	mac	
+嚜	mac	
 娩	mãn	
 晚	mãn	
 蠻	màn	
@@ -7688,31 +7685,31 @@
 鉬	mục	
 卜	múc	
 卜	muc	
-吻	mũn	
-愍	mũn	
-憫	mũn	
-旻	mũn	
-汶	mũn	
-湣	mũn	
-璺	mũn	
-蚊	mũn	
-閔	mũn	
-抆	mùn	
-文	mùn	
-汶	mùn	
-玟	mùn	
-紋	mùn	
-聞	mùn	
-閿	mùn	
-闅	mùn	
-雯	mùn	
-問	mụn	
-文	mụn	
-璺	mụn	
-紊	mụn	
-炆	mủn	
-緡	mủn	
-鰵	mủn	
+吻	moãn	
+愍	moãn	
+憫	moãn	
+旻	moãn	
+汶	moãn	
+湣	moãn	
+璺	moãn	
+蚊	moãn	
+閔	moãn	
+抆	moàn	
+文	moàn	
+汶	moàn	
+玟	moàn	
+紋	moàn	
+聞	moàn	
+閿	moàn	
+闅	moàn	
+雯	moàn	
+問	moạn	
+文	moạn	
+璺	moạn	
+紊	moạn	
+炆	moản	
+緡	moản	
+鰵	moản	
 冡	mùng	
 尨	mùng	
 幪	mùng	
@@ -7784,12 +7781,12 @@
 鼐	nại	
 傫	nái	
 尼	nải	
-那	nặc	
-那	nắc	
-疒	năc	
-粘	năc	
-黏	năc	
-𪙛	năc	
+那	nạc	
+那	nác	
+疒	nac	
+粘	nac	
+黏	nac	
+𪙛	nac	
 腩	nãm	
 南	nàm	
 喃	nàm	
@@ -7990,8 +7987,8 @@
 艤	ngải	
 螘	ngải	
 蟻	ngải	
-額	ngắc	
-呃	ngăc	
+額	ngác	
+呃	ngac	
 頷	ngãm	
 岩	ngàm	
 嵒	ngàm	
@@ -8371,27 +8368,27 @@
 𨰻	ngục	
 兀	ngúc	
 郁	ngúc	
-朊	ngũn	
-硯	ngũn	
-元	ngùn	
-原	ngùn	
-厵	ngùn	
-塬	ngùn	
-嫄	ngùn	
-沅	ngùn	
-源	ngùn	
-蚖	ngùn	
-螈	ngùn	
-覎	ngùn	
-言	ngùn	
-阮	ngùn	
-潤	ngụn	
-閏	ngụn	
-願	ngụn	
-耎	ngún	
-軟	ngún	
-輭	ngún	
-䓴	ngún	
+朊	ngoãn	
+硯	ngoãn	
+元	ngoàn	
+原	ngoàn	
+厵	ngoàn	
+塬	ngoàn	
+嫄	ngoàn	
+沅	ngoàn	
+源	ngoàn	
+蚖	ngoàn	
+螈	ngoàn	
+覎	ngoàn	
+言	ngoàn	
+阮	ngoàn	
+潤	ngoạn	
+閏	ngoạn	
+願	ngoạn	
+耎	ngoán	
+軟	ngoán	
+輭	ngoán	
+䓴	ngoán	
 喁	ngùng	
 毧	ngùng	
 濃	ngùng	
@@ -8517,7 +8514,7 @@
 勖	nuc	
 勗	nuc	
 恧	nuc	
-嫩	nụn	
+嫩	noạn	
 燶	nũng	
 儂	nùng	
 噥	nùng	
@@ -8654,16 +8651,16 @@
 哌	pải	
 派	pải	
 蒎	pải	
-啪	pắc	
-帕	pắc	
-拍	pắc	
-粕	pắc	
-釙	pắc	
-柏	păc	
-栢	păc	
-檗	păc	
-珀	păc	
-魄	păc	
+啪	pác	
+帕	pác	
+拍	pác	
+粕	pác	
+釙	pác	
+柏	pac	
+栢	pac	
+檗	pac	
+珀	pac	
+魄	pac	
 乑	pán	
 噴	pán	
 扳	pán	
@@ -9036,10 +9033,10 @@
 仆	pũc	
 仆	púc	
 仆	puc	
-湓	pũn	
-盆	pũn	
-噴	pún	
-濆	pún	
+湓	poãn	
+盆	poãn	
+噴	poán	
+濆	poán	
 塜	pùng	
 塳	pùng	
 漨	pùng	
@@ -9106,9 +9103,9 @@
 籭	sái	
 貰	sái	
 釃	sái	
-側	săc	
-嗦	săc	
-𢱢	săc	
+側	sac	
+嗦	sac	
+𢱢	sac	
 彡	sãm	
 穇	sãm	
 衫	sãm	
@@ -9640,22 +9637,22 @@
 倏	suc	
 叔	suc	
 縮	suc	
-瞬	sũn	
-腎	sũn	
-蜃	sũn	
-蜄	sũn	
-鶉	sũn	
-唇	sùn	
-淳	sùn	
-純	sùn	
-脣	sùn	
-蒓	sùn	
-蓴	sùn	
-醇	sùn	
-錞	sùn	
-馴	sùn	
-順	sụn	
-舜	sún	
+瞬	soãn	
+腎	soãn	
+蜃	soãn	
+蜄	soãn	
+鶉	soãn	
+唇	soàn	
+淳	soàn	
+純	soàn	
+脣	soàn	
+蒓	soàn	
+蓴	soàn	
+醇	soàn	
+錞	soàn	
+馴	soàn	
+順	soạn	
+舜	soán	
 嫞	sùng	
 崇	sùng	
 崈	sùng	
@@ -9683,8 +9680,8 @@
 𪗏	xái	
 呔	xải	
 銻	xải	
-賊	xặc	
-鰂	xặc	
+賊	xạc	
+鰂	xạc	
 蠶	xãm	
 巉	xàm	
 慚	xàm	
@@ -10041,49 +10038,49 @@
 遬	xuc	
 鵚	xuc	
 齪	xuc	
-圳	xũn	
-屯	xũn	
-屯	xũn	
-村	xũn	
-榛	xũn	
-津	xũn	
-溱	xũn	
-獉	xũn	
-窀	xũn	
-肫	xũn	
-臻	xũn	
-蓁	xũn	
-衠	xũn	
-諄	xũn	
-迍	xũn	
-邨	xũn	
-佺	xùn	
-全	xùn	
-嗪	xùn	
-囤	xùn	
-存	xùn	
-巡	xùn	
-廵	xùn	
-循	xùn	
-旬	xùn	
-栒	xùn	
-栓	xùn	
-泉	xùn	
-溱	xùn	
-痊	xùn	
-秦	xùn	
-筌	xùn	
-荃	xùn	
-螓	xùn	
-詮	xùn	
-蹲	xùn	
-輇	xùn	
-醛	xùn	
-鰁	xùn	
-吋	xún	
-寸	xún	
-村	xún	
-𧨸	xủn	
+圳	xoãn	
+屯	xoãn	
+屯	xoãn	
+村	xoãn	
+榛	xoãn	
+津	xoãn	
+溱	xoãn	
+獉	xoãn	
+窀	xoãn	
+肫	xoãn	
+臻	xoãn	
+蓁	xoãn	
+衠	xoãn	
+諄	xoãn	
+迍	xoãn	
+邨	xoãn	
+佺	xoàn	
+全	xoàn	
+嗪	xoàn	
+囤	xoàn	
+存	xoàn	
+巡	xoàn	
+廵	xoàn	
+循	xoàn	
+旬	xoàn	
+栒	xoàn	
+栓	xoàn	
+泉	xoàn	
+溱	xoàn	
+痊	xoàn	
+秦	xoàn	
+筌	xoàn	
+荃	xoàn	
+螓	xoàn	
+詮	xoàn	
+蹲	xoàn	
+輇	xoàn	
+醛	xoàn	
+鰁	xoàn	
+吋	xoán	
+寸	xoán	
+村	xoán	
+𧨸	xoản	
 蔥	xũng	
 叢	xùng	
 従	xùng	
@@ -10189,35 +10186,35 @@
 竺	uc	
 篤	uc	
 齷	uc	
-盹	ũn	
-頓	ũn	
-惇	ụn	
-扽	ụn	
-撴	ụn	
-敦	ụn	
-楯	ụn	
-沌	ụn	
-炖	ụn	
-燉	ụn	
-盾	ụn	
-砘	ụn	
-蹾	ụn	
-遁	ụn	
-鈍	ụn	
-頓	ụn	
-㪟	ụn	
-敦	ún	
-暾	ún	
-鐓	ún	
-驐	ún	
-噸	ủn	
-囤	ủn	
-墩	ủn	
-墪	ủn	
-屯	ủn	
-拴	ủn	
-礅	ủn	
-躉	ủn	
+盹	oãn	
+頓	oãn	
+惇	oạn	
+扽	oạn	
+撴	oạn	
+敦	oạn	
+楯	oạn	
+沌	oạn	
+炖	oạn	
+燉	oạn	
+盾	oạn	
+砘	oạn	
+蹾	oạn	
+遁	oạn	
+鈍	oạn	
+頓	oạn	
+㪟	oạn	
+敦	oán	
+暾	oán	
+鐓	oán	
+驐	oán	
+噸	oản	
+囤	oản	
+墩	oản	
+墪	oản	
+屯	oản	
+拴	oản	
+礅	oản	
+躉	oản	
 瓮	ũng	
 甕	ũng	
 罋	ũng	
@@ -10304,17 +10301,17 @@
 歪	vải	
 劃	vẵc	
 畫	vẵc	
-划	vặc	
-劃	vặc	
-惐	vặc	
-惑	vặc	
-或	vặc	
-畫	vặc	
-砉	vặc	
-豁	vặc	
-騞	vặc	
-域	văc	
-棫	văc	
+划	vạc	
+劃	vạc	
+惐	vạc	
+惑	vạc	
+或	vạc	
+畫	vạc	
+砉	vạc	
+豁	vạc	
+騞	vạc	
+域	vac	
+棫	vac	
 幻	vãn	
 挽	vãn	
 環	vãn	
@@ -10600,55 +10597,55 @@
 鎢	vú	
 靰	vú	
 鎢	vủ	
-允	vũn	
-尹	vũn	
-狁	vũn	
-云	vùn	
-勻	vùn	
-暈	vùn	
-煇	vùn	
-畇	vùn	
-紜	vùn	
-耘	vùn	
-芸	vùn	
-葷	vùn	
-蕓	vùn	
-贇	vùn	
-鄖	vùn	
-雲	vùn	
-餛	vùn	
-餫	vùn	
-魂	vùn	
-圂	vụn	
-惲	vụn	
-慁	vụn	
-殞	vụn	
-混	vụn	
-渾	vụn	
-溷	vụn	
-熨	vụn	
-琿	vụn	
-葷	vụn	
-諢	vụn	
-運	vụn	
-鄆	vụn	
-隕	vụn	
-韻	vụn	
-員	vún	
-慍	vún	
-榲	vún	
-氳	vún	
-溫	vún	
-瘟	vún	
-縕	vún	
-醞	vún	
-韞	vún	
-鰮	vún	
-搵	vủn	
-穩	vủn	
-蘊	vủn	
-醞	vủn	
-韞	vủn	
+允	voãn	
+尹	voãn	
+狁	voãn	
+云	voàn	
+勻	voàn	
+暈	voàn	
+煇	voàn	
+畇	voàn	
+紜	voàn	
+耘	voàn	
+芸	voàn	
+葷	voàn	
+蕓	voàn	
+贇	voàn	
+鄖	voàn	
+雲	voàn	
+餛	voàn	
+餫	voàn	
+魂	voàn	
+圂	voạn	
+惲	voạn	
+慁	voạn	
+殞	voạn	
+混	voạn	
+渾	voạn	
+溷	voạn	
+熨	voạn	
+琿	voạn	
+葷	voạn	
+諢	voạn	
+運	voạn	
+鄆	voạn	
+隕	voạn	
+韻	voạn	
+員	voán	
+慍	voán	
+榲	voán	
+氳	voán	
+溫	voán	
+瘟	voán	
+縕	voán	
+醞	voán	
+韞	voán	
+鰮	voán	
+搵	voản	
+穩	voản	
+蘊	voản	
+醞	voản	
+韞	voản	
 核	vũt	
 煀	vút	
 尉	vut	
@@ -10696,11 +10693,11 @@
 𨑭	slải	
 𩌦	slải	
 噻	slẵc	
-噻	slăc	
-塞	slăc	
-揌	slăc	
-㩙	slăc	
-𡨄	slăc	
+噻	slac	
+塞	slac	
+揌	slac	
+㩙	slac	
+𡨄	slac	
 三	slãm	
 三	slám	
 仨	slám	
@@ -11133,61 +11130,61 @@
 餿	sluc	
 鷫	sluc	
 㝛	sluc	
-悛	slùn	
-旋	slùn	
-漩	slùn	
-璇	slùn	
-璿	slùn	
-鏇	slùn	
-拴	slụn	
-篆	slụn	
-羡	slụn	
-銓	slụn	
-儇	slún	
-吅	slún	
-咺	slún	
-喧	slún	
-噀	slún	
-孫	slún	
-宣	slún	
-峋	slún	
-巽	slún	
-徇	slún	
-恂	slún	
-揎	slún	
-昍	slún	
-晅	slún	
-暄	slún	
-楦	slún	
-殉	slún	
-洵	slún	
-浚	slún	
-渲	slún	
-烜	slún	
-煊	slún	
-狥	slún	
-猻	slún	
-珣	slún	
-瑄	slún	
-碹	slún	
-絢	slún	
-翾	slún	
-荀	slún	
-萱	slún	
-蓀	slún	
-詢	slún	
-諼	slún	
-迅	slún	
-遜	slún	
-郇	slún	
-飧	slún	
-飱	slún	
-損	slủn	
-榫	slủn	
-筍	slủn	
-篹	slủn	
-簨	slủn	
-選	slủn	
+悛	sloàn	
+旋	sloàn	
+漩	sloàn	
+璇	sloàn	
+璿	sloàn	
+鏇	sloàn	
+拴	sloạn	
+篆	sloạn	
+羡	sloạn	
+銓	sloạn	
+儇	sloán	
+吅	sloán	
+咺	sloán	
+喧	sloán	
+噀	sloán	
+孫	sloán	
+宣	sloán	
+峋	sloán	
+巽	sloán	
+徇	sloán	
+恂	sloán	
+揎	sloán	
+昍	sloán	
+晅	sloán	
+暄	sloán	
+楦	sloán	
+殉	sloán	
+洵	sloán	
+浚	sloán	
+渲	sloán	
+烜	sloán	
+煊	sloán	
+狥	sloán	
+猻	sloán	
+珣	sloán	
+瑄	sloán	
+碹	sloán	
+絢	sloán	
+翾	sloán	
+荀	sloán	
+萱	sloán	
+蓀	sloán	
+詢	sloán	
+諼	sloán	
+迅	sloán	
+遜	sloán	
+郇	sloán	
+飧	sloán	
+飱	sloán	
+損	sloản	
+榫	sloản	
+筍	sloản	
+篹	sloản	
+簨	sloản	
+選	sloản	
 餸	slũng	
 娀	slúng	
 宋	slúng	
@@ -11414,46 +11411,46 @@
 龥	yệc	
 約	yếc	
 約	yêc	
-鷂	yễu	
-傜	yều	
-垚	yều	
-姚	yều	
-徭	yều	
-搖	yều	
-珧	yều	
-瑤	yều	
-窯	yều	
-窰	yều	
-繇	yều	
-脁	yều	
-謠	yều	
-軺	yều	
-遙	yều	
-銚	yều	
-陶	yều	
-颻	yều	
-鰩	yều	
-曜	yệu	
-耀	yệu	
-㿢	yệu	
-么	yếu	
-吆	yếu	
-崾	yếu	
-幺	yếu	
-徼	yếu	
-穾	yếu	
-約	yếu	
-腰	yếu	
-要	yếu	
-邀	yếu	
-靿	yếu	
-夭	yểu	
-妖	yểu	
-抌	yểu	
-窅	yểu	
-窈	yểu	
-舀	yểu	
-黝	yểu	
+鷂	yiễu	
+傜	yiều	
+垚	yiều	
+姚	yiều	
+徭	yiều	
+搖	yiều	
+珧	yiều	
+瑤	yiều	
+窯	yiều	
+窰	yiều	
+繇	yiều	
+脁	yiều	
+謠	yiều	
+軺	yiều	
+遙	yiều	
+銚	yiều	
+陶	yiều	
+颻	yiều	
+鰩	yiều	
+曜	yiệu	
+耀	yiệu	
+㿢	yiệu	
+么	yiếu	
+吆	yiếu	
+崾	yiếu	
+幺	yiếu	
+徼	yiếu	
+穾	yiếu	
+約	yiếu	
+腰	yiếu	
+要	yiếu	
+邀	yiếu	
+靿	yiếu	
+夭	yiểu	
+妖	yiểu	
+抌	yiểu	
+窅	yiểu	
+窈	yiểu	
+舀	yiểu	
+黝	yiểu	
 嫌	yiềm	
 閆	yiềm	
 閻	yiềm	
@@ -11699,58 +11696,58 @@
 豫	yị	
 預	yị	
 飫	yị	
-于	yí	
-伊	yí	
-依	yí	
-咿	yí	
-噫	yí	
-意	yí	
-扆	yí	
-於	yí	
-栘	yí	
-椅	yí	
-殪	yí	
-漪	yí	
-犄	yí	
-猗	yí	
-玗	yí	
-畬	yí	
-瘞	yí	
-瞖	yí	
-禕	yí	
-竽	yí	
-篒	yí	
-紆	yí	
-繄	yí	
-翳	yí	
-菸	yí	
-薏	yí	
-衣	yí	
-觭	yí	
-迂	yí	
-醫	yí	
-銥	yí	
-鐿	yí	
-餏	yí	
-饐	yí	
-鷖	yí	
-鷾	yí	
-黟	yí	
-依	yỉ	
-倚	yỉ	
-傴	yỉ	
-吚	yỉ	
-咿	yỉ	
-嫗	yỉ	
-於	yỉ	
-旖	yỉ	
-椅	yỉ	
-欹	yỉ	
-淤	yỉ	
-漪	yỉ	
-瘀	yỉ	
-綺	yỉ	
-飫	yỉ	
+于	í	
+伊	í	
+依	í	
+咿	í	
+噫	í	
+意	í	
+扆	í	
+於	í	
+栘	í	
+椅	í	
+殪	í	
+漪	í	
+犄	í	
+猗	í	
+玗	í	
+畬	í	
+瘞	í	
+瞖	í	
+禕	í	
+竽	í	
+篒	í	
+紆	í	
+繄	í	
+翳	í	
+菸	í	
+薏	í	
+衣	í	
+觭	í	
+迂	í	
+醫	í	
+銥	í	
+鐿	í	
+餏	í	
+饐	í	
+鷖	í	
+鷾	í	
+黟	í	
+依	ỉ	
+倚	ỉ	
+傴	ỉ	
+吚	ỉ	
+咿	ỉ	
+嫗	ỉ	
+於	ỉ	
+旖	ỉ	
+椅	ỉ	
+欹	ỉ	
+淤	ỉ	
+漪	ỉ	
+瘀	ỉ	
+綺	ỉ	
+飫	ỉ	
 窨	yẫm	
 蔭	yẫm	
 䕃	yẫm	
@@ -11884,82 +11881,82 @@
 黝	yửu	
 唷	yỏ	
 喲	yỏ	
-圓	oãn	
-丸	oàn	
-元	oàn	
-員	oàn	
-園	oàn	
-圓	oàn	
-圜	oàn	
-媛	oàn	
-媴	oàn	
-完	oàn	
-懸	oàn	
-援	oàn	
-椽	oàn	
-櫞	oàn	
-沿	oàn	
-泫	oàn	
-湲	oàn	
-溳	oàn	
-炫	oàn	
-烷	oàn	
-爰	oàn	
-猨	oàn	
-猿	oàn	
-玄	oàn	
-瑗	oàn	
-眩	oàn	
-紈	oàn	
-緣	oàn	
-芄	oàn	
-芫	oàn	
-蝯	oàn	
-衒	oàn	
-袁	oàn	
-轅	oàn	
-鈆	oàn	
-鉛	oàn	
-魭	oàn	
-鶢	oàn	
-黿	oàn	
-垸	oạn	
-掾	oạn	
-縣	oạn	
-遠	oạn	
-院	oạn	
-冤	oán	
-宛	oán	
-怨	oán	
-淵	oán	
-眢	oán	
-箢	oán	
-裷	oán	
-鳶	oán	
-鴛	oán	
-鵷	oán	
-兗	oản	
-遠	oản	
+圓	yõn	
+丸	yòn	
+元	yòn	
+員	yòn	
+園	yòn	
+圓	yòn	
+圜	yòn	
+媛	yòn	
+媴	yòn	
+完	yòn	
+懸	yòn	
+援	yòn	
+椽	yòn	
+櫞	yòn	
+沿	yòn	
+泫	yòn	
+湲	yòn	
+溳	yòn	
+炫	yòn	
+烷	yòn	
+爰	yòn	
+猨	yòn	
+猿	yòn	
+玄	yòn	
+瑗	yòn	
+眩	yòn	
+紈	yòn	
+緣	yòn	
+芄	yòn	
+芫	yòn	
+蝯	yòn	
+衒	yòn	
+袁	yòn	
+轅	yòn	
+鈆	yòn	
+鉛	yòn	
+魭	yòn	
+鶢	yòn	
+黿	yòn	
+垸	yọn	
+掾	yọn	
+縣	yọn	
+遠	yọn	
+院	yọn	
+冤	yón	
+宛	yón	
+怨	yón	
+淵	yón	
+眢	yón	
+箢	yón	
+裷	yón	
+鳶	yón	
+鴛	yón	
+鵷	yón	
+兗	yỏn	
+遠	yỏn	
 戎	yòng	
-噦	oạt	
-岤	oạt	
-悅	oạt	
-曰	oạt	
-樾	oạt	
-穴	oạt	
-篗	oạt	
-籆	oạt	
-籰	oạt	
-粵	oạt	
-茓	oạt	
-說	oạt	
-越	oạt	
-軏	oạt	
-鉞	oạt	
-閱	oạt	
-㧒	oạt	
-乙	oat	
-釔	oat	
+噦	yọt	
+岤	yọt	
+悅	yọt	
+曰	yọt	
+樾	yọt	
+穴	yọt	
+篗	yọt	
+籆	yọt	
+籰	yọt	
+粵	yọt	
+茓	yọt	
+說	yọt	
+越	yọt	
+軏	yọt	
+鉞	yọt	
+閱	yọt	
+㧒	yọt	
+乙	yot	
+釔	yot	
 叡	yụy	
 枘	yụy	
 汭	yụy	
@@ -11997,9 +11994,9 @@
 薁	yuc	
 郁	yuc	
 鋈	yuc	
-勻	oàn	
-昀	oàn	
-筠	oàn	
+勻	yoàn	
+昀	yoàn	
+筠	yoàn	
 勇	yũng	
 勈	yũng	
 傛	yùng	
