--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -14020,67 +14020,67 @@
 𦸒	y	
 𩂱	y	
 𪘲	y	
-㕈	yỉ	
-㫊	yỉ	
-㰻	yỉ	
-䭲	yỉ	
-倚	yỉ	
-偯	yỉ	
-咦	yỉ	
-婍	yỉ	
-庡	yỉ	
-扆	yỉ	
-敧	yỉ	
-旑	yỉ	
-旖	yỉ	
-椅	yỉ	
-漪	yỉ	
-犄	yỉ	
-猗	yỉ	
-綺	yỉ	
-裿	yỉ	
-踦	yỉ	
-輢	yỉ	
-銥	yỉ	
-陭	yỉ	
-齮	yỉ	
-𣺈	yỉ	
-𤀽	yỉ	
-𦿟	yỉ	
-㦉	yí	
-㦤	yí	
-㱅	yí	
-㱲	yí	
-䓹	yí	
-䗷	yí	
-䬥	yí	
-䵝	yí	
-亄	yí	
-婼	yí	
-嫕	yí	
-嬑	yí	
-悥	yí	
-意	yí	
-懿	yí	
-撎	yí	
-欭	yí	
-殪	yí	
-瘞	yí	
-瘱	yí	
-癔	yí	
-薏	yí	
-衣	yí	
-袣	yí	
-議	yí	
-豷	yí	
-鐿	yí	
-饐	yí	
-鷧	yí	
-鷾	yí	
-𡄻	yí	
-𡤜	yí	
-𢚘	yí	
-𢢶	yí	
+㕈	ỷ	
+㫊	ỷ	
+㰻	ỷ	
+䭲	ỷ	
+倚	ỷ	
+偯	ỷ	
+咦	ỷ	
+婍	ỷ	
+庡	ỷ	
+扆	ỷ	
+敧	ỷ	
+旑	ỷ	
+旖	ỷ	
+椅	ỷ	
+漪	ỷ	
+犄	ỷ	
+猗	ỷ	
+綺	ỷ	
+裿	ỷ	
+踦	ỷ	
+輢	ỷ	
+銥	ỷ	
+陭	ỷ	
+齮	ỷ	
+𣺈	ỷ	
+𤀽	ỷ	
+𦿟	ỷ	
+㦉	ý	
+㦤	ý	
+㱅	ý	
+㱲	ý	
+䓹	ý	
+䗷	ý	
+䬥	ý	
+䵝	ý	
+亄	ý	
+婼	ý	
+嫕	ý	
+嬑	ý	
+悥	ý	
+意	ý	
+懿	ý	
+撎	ý	
+欭	ý	
+殪	ý	
+瘞	ý	
+瘱	ý	
+癔	ý	
+薏	ý	
+衣	ý	
+袣	ý	
+議	ý	
+豷	ý	
+鐿	ý	
+饐	ý	
+鷧	ý	
+鷾	ý	
+𡄻	ý	
+𡤜	ý	
+𢚘	ý	
+𢢶	ý	
 㐌	yì	
 㖇	yì	
 㝖	yì	
@@ -14871,65 +14871,65 @@
 齴	yiện	
 𡷹	yiện	
 𩃀	yiện	
-㖜	inh		
-䁐	inh		
-䊔	inh		
-䋝	inh		
-䣐	inh		
-䦫	inh		
-䧹	inh		
-䨉	inh		
-偀	inh		
-啨	inh		
-嚶	inh		
-央	inh		
-媖	inh		
-嫈	inh		
-嬰	inh		
-孆	inh		
-孾	inh		
-愥	inh		
-應	inh		
-攖	inh		
-朠	inh		
-桜	inh		
-櫻	inh		
-渶	inh		
-瀴	inh		
-煐	inh		
-珱	inh		
-瑛	inh		
-瓔	inh		
-碤	inh		
-礯	inh		
-緓	inh		
-纓	inh		
-绬	inh		
-膺	inh		
-英	inh		
-蘡	inh		
-蝧	inh		
-蠳	inh		
-譍	inh		
-譻	inh		
-賏	inh		
-鑍	inh		
-霙	inh		
-韹	inh		
-韺	inh		
-鶧	inh		
-鷹	inh		
-鸚	inh		
-𠸄	inh		
-𡎘	inh		
-𡢞	inh		
-𨰃	inh		
-𩤯	inh		
-𪃳	inh		
-呎	inh	 xếc	
-吋	inh	 xoán	
-啢	inh	 lưởng	
-𠺖	inh	 mẫu	
+㖜	yinh	
+䁐	yinh	
+䊔	yinh	
+䋝	yinh	
+䣐	yinh	
+䦫	yinh	
+䧹	yinh	
+䨉	yinh	
+偀	yinh	
+啨	yinh	
+嚶	yinh	
+央	yinh	
+媖	yinh	
+嫈	yinh	
+嬰	yinh	
+孆	yinh	
+孾	yinh	
+愥	yinh	
+應	yinh	
+攖	yinh	
+朠	yinh	
+桜	yinh	
+櫻	yinh	
+渶	yinh	
+瀴	yinh	
+煐	yinh	
+珱	yinh	
+瑛	yinh	
+瓔	yinh	
+碤	yinh	
+礯	yinh	
+緓	yinh	
+纓	yinh	
+绬	yinh	
+膺	yinh	
+英	yinh	
+蘡	yinh	
+蝧	yinh	
+蠳	yinh	
+譍	yinh	
+譻	yinh	
+賏	yinh	
+鑍	yinh	
+霙	yinh	
+韹	yinh	
+韺	yinh	
+鶧	yinh	
+鷹	yinh	
+鸚	yinh	
+𠸄	yinh	
+𡎘	yinh	
+𡢞	yinh	
+𨰃	yinh	
+𩤯	yinh	
+𪃳	yinh	
+呎	yinh	 xếc	
+吋	yinh	 xoán	
+啢	yinh	 lưởng	
+𠺖	yinh	 mẫu	
 㢍	yỉnh	
 㲟	yỉnh	
 䚆	yỉnh	
@@ -15924,32 +15924,32 @@
 酑	ư	
 陓	ư	
 鯲	ư	
-偊	yử	
-傴	yử	
-噢	yử	
-嫗	yử	
-淤	yử	
-煦	yử	
-痀	yử	
-瘀	yử	
-魚	yử	
-𩺰	yử	
-䣱	yứ	
-䣴	yứ	
-休	yứ	
-呴	yứ	
-喣	yứ	
-嫗	yứ	
-棜	yứ	
-淤	yứ	
-煦	yứ	
-燠	yứ	
-瘀	yứ	
-秗	yứ	
-酗	yứ	
-醧	yứ	
-飫	yứ	
-饇	yứ	
+偊	ử	
+傴	ử	
+噢	ử	
+嫗	ử	
+淤	ử	
+煦	ử	
+痀	ử	
+瘀	ử	
+魚	ử	
+𩺰	ử	
+䣱	ứ	
+䣴	ứ	
+休	ứ	
+呴	ứ	
+喣	ứ	
+嫗	ứ	
+棜	ứ	
+淤	ứ	
+煦	ứ	
+燠	ứ	
+瘀	ứ	
+秗	ứ	
+酗	ứ	
+醧	ứ	
+飫	ứ	
+饇	ứ	
 㐵	yừ	
 㔱	yừ	
 㖲	yừ	
@@ -30539,24 +30539,24 @@
 鰞	u	
 鴮	u	
 𠌥	u	
-䃖	vủ	
-䛩	vủ	
-塢	vủ	
-嵨	vủ	
-捂	vủ	
-摀	vủ	
-溩	vủ	
-滸	vủ	
-瑦	vủ	
-祜	vủ	
-隖	vủ	
-𧙖	vủ	
-䜑	vú	
-噁	vú	
-惡	vú	
-污	vú	
-𠌥	vú	
-𨉼	vú	
+䃖	ủ	
+䛩	ủ	
+塢	ủ	
+嵨	ủ	
+捂	ủ	
+摀	ủ	
+溩	ủ	
+滸	ủ	
+瑦	ủ	
+祜	ủ	
+隖	ủ	
+𧙖	ủ	
+䜑	ú	
+噁	ú	
+惡	ú	
+污	ú	
+𠌥	ú	
+𨉼	ú	
 㗅	vù	
 㝬	vù	
 㯛	vù	
